# image-to-text

./: main.py  pyproject.toml
data/: data.json
