[tool.poetry]
name = "image-to-text-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
pillow = "^11.0.0"
pytesseract = "^0.3.13"
python-multipart = "^0.0.19"
openai = "^1.57.3"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
start = "uvicorn main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
